parse-display-tests/tests/compile_fail/from_str_no_field_in_format.rs
use parse_display::FromStr;

#[derive(FromStr)]
#[display("abc")]
struct TestStruct {
    x: u8,
}

fn main() {}
